--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "decimal.js": "^10.5.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
+    "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-enforces-ssl": "^1.1.0",
     "final-form": "4.20.10",
