--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sentry/browser": "^8.55.0",
     "@sentry/node": "^8.55.0",
     "autosize": "^5.0.2",
+    "axios": "^1.13.2",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.20.3",
     "classnames": "^2.5.1",
@@ -48,6 +49,7 @@
     "react-image-gallery": "1.3.0",
     "react-intl": "6.8.4",
     "react-moment-proptypes": "^1.8.1",
+    "react-phone-number-input": "^3.4.14",
     "react-redux": "^8.1.2",
     "react-router-dom": "^5.3.4",
     "rehype-react": "^6.2.1",
